Investigate birds clusters

--- a/nn/bird-vs-not-bird/bird-vs-not-bird-transfer-learning.ipynb
+++ b/nn/bird-vs-not-bird/bird-vs-not-bird-transfer-learning.ipynb
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1302,9 +1302,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/gaiar/developer/birds-of-berlin/nn/bird-vs-not-bird/dataset/test/unknown\n"
+     ]
+    }
+   ],
    "source": [
     "BIRDS_DIR = \"../../datasets/data\"\n",
     "cwd = os.getcwd()\n",
@@ -1315,9 +1323,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61365\n"
+     ]
+    }
+   ],
    "source": [
     "img_list = glob.glob(os.path.join(\"/home/gaiar/developer/birds-of-berlin/datasets/data/\",\"*/*.jpg\"))\n",
     "print(len(img_list))"
@@ -1325,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
